frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod

spec:
  containers:
    - name: frontend
      image: davidlekkzy/shopeasy-frontend:latest
      ports:
        - containerPort: 8080
