redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis

spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis
          image: redis:7.4-alpine

          ports:
            - containerPort: 6379

          command:
            - sh
            - -c

          args:
            - redis-server --requirepass "$REDIS_PASSWORD"
