shopeasy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: shopeasy-ingress
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: shopeasy.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
